add ; to fixed build error.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ script:
 
 after_script:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
-    docker push michalix/vrdg
+    docker push michalix/vrdg;
     fi
