--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,11 @@ after_script:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
     docker push michalix/vrdg;
     fi
+
+deploy:
+  provider: releases
+  api_key: $GIT_OAUTH_TOKEN
+  file: target/vrdg-fat.jar
+  skip_cleanup: true
+  on:
+    tags: true
