--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,10 @@ after_script:
     docker push michalix/vrdg;
     fi
 
-deploy:
-  provider: releases
-  api_key: $GIT_OAUTH_TOKEN
-  file: target/vrdg-fat.jar
-  skip_cleanup: true
-  on:
-    tags: true
+#deploy:
+#  provider: releases
+#  api_key: $GIT_OAUTH_TOKEN
+#  file: target/vrdg-fat.jar
+#  skip_cleanup: true
+#  on:
+#    tags: true
