--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,13 @@ before_install:
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
+  - echo $GPG_SECRETKEYS | base64 --decode | $GPG_EXECUTABLE --import
+  - echo $GPG_OWNTRUST | base64 --decode | $GPG_EXECUTABLE --import-ownertrust
+
+install:
+  - mvn --settings .travis/settings.xml install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
 script:
-  - mvn package -Dgpg.passphrase=$GPG_KEY
   - docker build -t michalix/vrdg .
 
 after_script:
@@ -25,10 +29,25 @@ after_script:
     docker push michalix/vrdg;
     fi
 
-#deploy:
-#  provider: releases
-#  api_key: $GIT_OAUTH_TOKEN
-#  file: target/vrdg-fat.jar
-#  skip_cleanup: true
-#  on:
-#    tags: true
+deploy:
+  provider: releases
+  api_key: $GIT_OAUTH_TOKEN
+  file: target/vrdg-fat.jar
+  skip_cleanup: true
+  on:
+    tags: true
+
+# -
+#    provider: script
+#    script: .travis/deploy.sh
+#    on:
+#      repo: ExampleOrg/my-library
+#      branch: master
+#      jdk: oraclejdk8
+#-
+#    provider: script
+#    script: .travis/deploy.sh
+#    on:
+#      repo: ExampleOrg/my-library
+#      tags: true
+#      jdk: oraclejdk8
