--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ before_install:
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
-  - echo ${GPG_SECRETKEYS} | base64 --decode | gpg --import
-  - echo ${GPG_OWNTRUST} | base64 --decode | gpg --import-ownertrust
+  - source .travis/gpg.sh
 
 install:
   - mvn --settings .travis/settings.xml install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
