--- a/pom.xml
+++ b/pom.xml
@@ -78,14 +78,14 @@
                     <useIncrementalCompilation>true</useIncrementalCompilation>
                     </configuration>
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-release-plugin</artifactId>
-                    <version>2.1</version>
-                    <configuration>
-                        <autoVersionSubmodules>true</autoVersionSubmodules>
-                    </configuration>
-                </plugin>
+                <!--<plugin>-->
+                    <!--<groupId>org.apache.maven.plugins</groupId>-->
+                    <!--<artifactId>maven-release-plugin</artifactId>-->
+                    <!--<version>2.1</version>-->
+                    <!--<configuration>-->
+                        <!--<autoVersionSubmodules>true</autoVersionSubmodules>-->
+                    <!--</configuration>-->
+                <!--</plugin>-->
             </plugins>
         </pluginManagement>
 
